# git-vrc

./: .gitignore  .gitmodules  Cargo.toml  README.en.md  README.ja.md  README.md  git-vrc.iss
.github/workflows/: ci.yml  release.yml
src/: clean.rs  git.rs  install.rs  macros.rs  main.rs  smudge.rs  uninstall.rs  yaml.rs
src/clean/: context.rs  filter.rs  mod.rs
src/clean/filter/: context.rs  first.rs  main.rs  mod.rs  remove_components.rs
