[workspace]
members = [
    ".",
    "yaml-rust",
]

[package]
name = "git-vrc"
version = "0.1.0"
authors = ["anatawa12"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A command line extension for git to reduce meaningless diff on git of VRC project."
repository = "https://github.com/anatawa12/git-vrc"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
itertools = "0.10"
log = "0.4"
yaml-rust = { path = "yaml-rust" }

[dependencies.simple_logger]
version = "2"
features = ["stderr"]

[dependencies.clap]
version = "3"
features = ["derive"]
